--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "dc-corp-learning",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
-  }
+    "name": "dc-corp-learning",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "12.0.4",
+        "node-sass": "^6.0.1",
+        "prop-types": "^15.7.2",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.0",
+        "eslint": "7.32.0",
+        "eslint-config-next": "12.0.4",
+        "postcss": "^8.4.4",
+        "tailwindcss": "^2.2.19"
+    }
 }
