personnalisation des styles

--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "autoprefixer": "^10.4.0",
         "next": "12.0.4",
         "node-sass": "^6.0.1",
+        "postcss": "^8.4.4",
         "prop-types": "^15.7.2",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "tailwindcss": "^2.2.19"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.0",
         "eslint": "7.32.0",
-        "eslint-config-next": "12.0.4",
-        "postcss": "^8.4.4",
-        "tailwindcss": "^2.2.19"
+        "eslint-config-next": "12.0.4"
     }
 }
