--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "next": "12.0.4",
         "node-sass": "^6.0.1",
         "postcss": "^8.4.4",
+        "prismjs": "^1.26.0",
         "prop-types": "^15.7.2",
         "react": "17.0.2",
         "react-dom": "17.0.2",
